--- a/myadmin/templates/users_management_manage.html
+++ b/myadmin/templates/users_management_manage.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="flex justify-end mt-6 gap-4">
-                <a href="{% url 'users_management' %}" class="btn">Back</a>
+                <a href="{{ back_url }}" class="btn">Back</a>
                 <button type="submit" class="btn btn-primary">Save Changes</button>
             </div>
         </form>
