--- a/myadmin/templates/solar_management_manage.html
+++ b/myadmin/templates/solar_management_manage.html
@@ -158,7 +158,7 @@
         {% else %}
         <div class="flex flex-col gap-2">
             {% for report in reports %}
-            <a href="{% url 'reports_detail' report_id=report.id %}"
+            <a href="{% url 'report_detail' report.id %}"
                 class="bg-gray-100 hover:bg-gray-200 p-4 rounded-md flex justify-between items-center shadow-sm">
                 <div class="text-gray-800 font-medium">{{ forloop.counter }}. {{ report.powerplant.name }}</div>
                 <div class="text-sm text-gray-600">{{ report.createdAt }}</div>
